Correctly align the high score "legends" (headers).

--- a/app/assets/stylesheets/_high-scores.sass
+++ b/app/assets/stylesheets/_high-scores.sass
@@ -47,7 +47,7 @@ $score-metric-width: 110px
         width: $score-metric-width + 20px
 
       .score
-        margin-left: 55px
+        margin-left: 75px
         width: 60px
 
       .emissions
